# wip_rs_logger_macro

./: Cargo.toml  README.md  justfile
rs_dev/: Cargo.toml
rs_dev/src/: logger.rs  main.rs
rs_logger/: Cargo.toml
rs_logger/src/: lib.rs
rs_logger_errors/: Cargo.toml
rs_logger_errors/src/: attributes.rs  checklist.md  declaration_errors.rs  enum_decl.rs  example_code.rs  lib.rs  value_errors.rs  variant_errors.rs  variant_msg_errors.rs
rs_logger_errors/src/declaration_errors/: has_variant_attr.rs  invalid_declaration_type.rs  missing_attr.rs  multiple_attrs.rs  no_attrs.rs
rs_logger_errors/src/enum_decl/: missing_attr.rs  multiple_attrs.rs
rs_logger_errors/src/example_code/: enum_example.rs  variant_example.rs
rs_logger_errors/src/value_errors/: invalid_number_u4.rs  invalid_number_u8.rs  (+4 more)
rs_logger_macro/: Cargo.toml
rs_logger_macro/src/: lib.rs  logger.rs
rs_logger_macro/src/logger/: enum_decl.rs  parse_attr.rs  parse_enum.rs
rs_logger_macro/src/logger/parse_attr/: to_literal.rs
rs_logger_macro/src/logger/parse_enum/: decl_tokens.rs  enum_attrs.rs  enum_variants.rs
rs_logger_macro/src/logger/parse_enum/enum_attrs/: attr_name.rs  eq_crate_idx.rs  is_enum_attr.rs  parse_crate_idx.rs  parse_log_path.rs  parse_module_idx.rs
rs_logger_macro/src/logger/parse_enum/enum_variants/: attr_value.rs  has_variant_attr.rs  log_id.rs  validate_value.rs  variant_contents.rs
rs_logger_macro/src/logger/parse_enum/enum_variants/validate_value/: types.rs
rs_logger_macro/src/logger/parse_enum/enum_variants/validate_value/types/: inner_value.rs  left_bracket.rs
(+6 files in other folders)
