[package]
name = "rs_logger_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
rs_logger_errors = { path = "../rs_logger_errors" }
venial = "0.5.0"
litrs = "0.4.0"

[lib]
proc-macro = true
